Work in progress

--- a/wp-content/themes/chargeautomation/assets/scss/style.scss
+++ b/wp-content/themes/chargeautomation/assets/scss/style.scss
@@ -11,3 +11,19 @@ Text Domain:   page-builder-framework-child
 */
 
 /* Your custom code goes here! */
+
+// Accordion
+.ca-accordion {
+    background: #000;
+    &__trigger {
+        cursor: pointer;
+    }
+
+    &__content {
+        display: none;
+
+        &.active {
+            display: block;
+        }
+    }
+}
